// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarketingComponent should NOT show error message, when errorMessage is empty 1`] = `
<pf-marketing-image
  env={[Function Object]}
  errorMessage=""
  fb={[Function FormBuilder]}
  fileRestrictions={[Function Object]}
  headerStatus=""
  marketingForm={[Function FormGroup]}
  submitted="false"
  uploadSaveUrl={[Function String]}
>
  <pf-page-with-title-bar>
    
     Marketing Image 
    
    <form
      class="ng-untouched ng-pristine ng-valid"
      novalidate=""
    >
      <label
        class="col-form-label"
      >
        Marketing URL:
      </label>
      <input
        class="w-100 ng-untouched ng-pristine ng-valid"
        formcontrolname="url"
        placeholder="http://"
        type="text"
      />
      <p
        class="text-danger"
        hidden=""
      >
         URL should be minimum 4 characters. 
      </p>
      <label
        class="col-form-label"
      >
        Marketing image:
      </label>
      <kendo-upload>
        <kendo-upload-messages
          clearselectedfiles="Cancel"
          select="Select file..."
          uploadselectedfiles="Upload marketing image"
        />
      </kendo-upload>
      
      
    </form>
  </pf-page-with-title-bar>
</pf-marketing-image>
`;

exports[`MarketingComponent should NOT show the preview image, when previewFileUri is empty 1`] = `
<pf-marketing-image
  env={[Function Object]}
  errorMessage=""
  fb={[Function FormBuilder]}
  fileRestrictions={[Function Object]}
  headerStatus=""
  marketingForm={[Function FormGroup]}
  previewFileUri=""
  submitted="false"
  uploadSaveUrl={[Function String]}
>
  <pf-page-with-title-bar>
    
     Marketing Image 
    
    <form
      class="ng-untouched ng-pristine ng-valid"
      novalidate=""
    >
      <label
        class="col-form-label"
      >
        Marketing URL:
      </label>
      <input
        class="w-100 ng-untouched ng-pristine ng-valid"
        formcontrolname="url"
        placeholder="http://"
        type="text"
      />
      <p
        class="text-danger"
        hidden=""
      >
         URL should be minimum 4 characters. 
      </p>
      <label
        class="col-form-label"
      >
        Marketing image:
      </label>
      <kendo-upload>
        <kendo-upload-messages
          clearselectedfiles="Cancel"
          select="Select file..."
          uploadselectedfiles="Upload marketing image"
        />
      </kendo-upload>
      
      
    </form>
  </pf-page-with-title-bar>
</pf-marketing-image>
`;

exports[`MarketingComponent should show error message, when errorMessage is NOT empty 1`] = `
<pf-marketing-image
  env={[Function Object]}
  errorMessage={[Function String]}
  fb={[Function FormBuilder]}
  fileRestrictions={[Function Object]}
  headerStatus=""
  marketingForm={[Function FormGroup]}
  submitted="false"
  uploadSaveUrl={[Function String]}
>
  <pf-page-with-title-bar>
    
     Marketing Image 
    
    <form
      class="ng-untouched ng-pristine ng-valid"
      novalidate=""
    >
      <label
        class="col-form-label"
      >
        Marketing URL:
      </label>
      <input
        class="w-100 ng-untouched ng-pristine ng-valid"
        formcontrolname="url"
        placeholder="http://"
        type="text"
      />
      <p
        class="text-danger"
        hidden=""
      >
         URL should be minimum 4 characters. 
      </p>
      <label
        class="col-form-label"
      >
        Marketing image:
      </label>
      <kendo-upload>
        <kendo-upload-messages
          clearselectedfiles="Cancel"
          select="Select file..."
          uploadselectedfiles="Upload marketing image"
        />
      </kendo-upload>
      
      <span
        class="text-danger"
      >
        test
      </span>
      
    </form>
  </pf-page-with-title-bar>
</pf-marketing-image>
`;

exports[`MarketingComponent should show the preview image, when previewFileUri is NOT empty 1`] = `
<pf-marketing-image
  env={[Function Object]}
  errorMessage=""
  fb={[Function FormBuilder]}
  fileRestrictions={[Function Object]}
  headerStatus=""
  marketingForm={[Function FormGroup]}
  previewFileUri={[Function String]}
  submitted="false"
  uploadSaveUrl={[Function String]}
>
  <pf-page-with-title-bar>
    
     Marketing Image 
    
    <form
      class="ng-untouched ng-pristine ng-valid"
      novalidate=""
    >
      <label
        class="col-form-label"
      >
        Marketing URL:
      </label>
      <input
        class="w-100 ng-untouched ng-pristine ng-valid"
        formcontrolname="url"
        placeholder="http://"
        type="text"
      />
      <p
        class="text-danger"
        hidden=""
      >
         URL should be minimum 4 characters. 
      </p>
      <label
        class="col-form-label"
      >
        Marketing image:
      </label>
      <kendo-upload>
        <kendo-upload-messages
          clearselectedfiles="Cancel"
          select="Select file..."
          uploadselectedfiles="Upload marketing image"
        />
      </kendo-upload>
      
      
      <span>
        <img
          class="preview mt-4"
          src="test"
        />
      </span>
    </form>
  </pf-page-with-title-bar>
</pf-marketing-image>
`;
